test/pending/neg/t9657-less-fishy.check
t9657-less-fishy.scala:27: warning: unreachable code
    case Bicycle => ???      // expected unreachable 1
                    ^
t9657-less-fishy.scala:33: warning: unreachable code
    case _: Bicycle.type => ???      // expected unreachable 2
                            ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
